- Migrate to Java 21 - Migrate Gradle to 8.13 - Remove Spock dependences - Migrate tests from Spock to JUnit Jupiter - Minor code clean up