@@ -1,19 +1,30 @@
-apply plugin: 'java'
-apply plugin: 'application'
-apply plugin: 'groovy'
-apply plugin: 'idea'
+plugins {
+    id 'java'
+    id 'application'
+    id 'idea'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
+}
 
-mainClassName = 'com.skocur.imagecipher.Main'
+java {
+    sourceCompatibility = JavaVersion.VERSION_21
+    targetCompatibility = JavaVersion.VERSION_21
+}
 
-jar {
+application {
+    mainClass = 'com.skocur.imagecipher.Main'
+    applicationDefaultJvmArgs = [
+        '--add-modules', 'javafx.controls,javafx.fxml',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.application=ALL-UNNAMED'
+    ]
+}
+
+tasks.jar {
     manifest {
         attributes(
-                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'com.skocur.imagecipher.Main',
+                'Main-Class': application.mainClass.get(),
                 'Build-Time': new Date().format("yyyy.MM.dd")
         )
     }
-
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
@@ -22,47 +33,60 @@ jar {
 sourceSets {
     main {
         java {
-            srcDirs 'build/classes/'
+            srcDirs = ['src/main/java']
         }
     }
 }
 
+repositories {
+    mavenCentral()
+    maven { url 'https://jitpack.io' }
+}
+
+javafx {
+    version = '21'
+    modules = ['javafx.controls', 'javafx.fxml', 'javafx.swing']
+}
+
 dependencies {
-    implementation 'org.jetbrains:annotations:16.0.2'
-    implementation group: 'com.beust', name: 'jcommander', version: '1.69'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.0.1'
-    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.9.8'
+    implementation 'org.jetbrains:annotations:24.0.0'
 
-    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.2.4'
-    implementation 'com.jfoenix:jfoenix:8.0.8'
+    implementation 'org.jcommander:jcommander:2.0'
 
-    implementation "io.reactivex.rxjava3:rxjava:3.0.1"
+    implementation 'org.openjfx:javafx-controls:21'
+    implementation 'org.openjfx:javafx-fxml:21'
 
-    implementation 'com.google.dagger:dagger:2.27'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.27'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
+    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.8.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0'
+    implementation 'com.jfoenix:jfoenix:9.0.10'
 
-    implementation 'org.apache.logging.log4j:log4j-api:2.11.1'
-    implementation 'org.apache.logging.log4j:log4j-core:2.11.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.11.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.6'
+
+    implementation 'com.google.dagger:dagger:2.48'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.48'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
+    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.20.0'
 
     implementation 'com.jcabi:jcabi-manifests:1.1'
 
-    implementation files("libs/IcSdk-0.1.jar")
-
-    testCompile(
-            'junit:junit:4.12',
-            'org.codehaus.groovy:groovy-all:2.4.4',
-            'org.spockframework:spock-core:1.0-groovy-2.4',
-            'org.mockito:mockito-all:1.10.19'
-    )
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.10.1'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-core:5.7.0'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.7.0'
 }
 
-repositories {
-    mavenCentral()
-    jcenter()
-
-    maven { url 'https://jitpack.io' }
+test {
+    useJUnitPlatform()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
